@@ -3,14 +3,14 @@
 # Test suite for keyring manipulation.
 #
 # Written by Russ Allbery <rra@stanford.edu>
-# Copyright 2011, 2012
+# Copyright 2011, 2012, 2013
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # See LICENSE for licensing terms.
 
 use strict;
 
-use Test::More tests => 61;
+use Test::More tests => 63;
 
 use lib ('t/lib', 'lib', 'blib/arch');
 use WebAuth qw(:const);
@@ -152,33 +152,32 @@ eval {
 is ($@, '', 'No unexpected exceptions');
 
 # Check that sending WebAuth::Keyring different objects than it expect fails.
-eval {
-    my $keyring= WebAuth::Keyring::new('WebAuth::NotKeyring');
-};
+my $keyring = eval { WebAuth::Keyring::new('WebAuth::NotKeyring') };
 like ($@, qr{^subclassing of WebAuth::Keyring is not supported}ms,
     'Trying to subclass WebAuth::Keyring fails');
-eval {
-    my $keyring= WebAuth::Keyring::decode('WebAuth::NotKeyring');
-};
+$keyring = eval { WebAuth::Keyring::decode('WebAuth::NotKeyring') };
 like ($@, qr{^subclassing of WebAuth::Keyring is not supported}ms,
     '... as does trying to subclass the decode function');
-eval {
-    my $keyring= WebAuth::Keyring::read('WebAuth::NotKeyring');
-};
+$keyring = eval { WebAuth::Keyring::read('WebAuth::NotKeyring') };
 like ($@, qr{^subclassing of WebAuth::Keyring is not supported}ms,
     '... as does trying to subclass the read function');
-eval {
-    my $keyring= WebAuth::Keyring->new('WebAuth::NotKeyring');
-};
+$keyring = eval { WebAuth::Keyring->new('WebAuth::NotKeyring') };
 like ($@, qr{^second argument must be a WebAuth object}ms,
     'Trying to give WebAuth::Keyring a non-WebAuth context fails');
-eval {
-    my $keyring= WebAuth::Keyring->decode('WebAuth::NotKeyring');
-};
+$keyring = eval { WebAuth::Keyring->decode('WebAuth::NotKeyring') };
 like ($@, qr{^second argument must be a WebAuth object}ms,
     '... as does trying to give one to the decode function');
-eval {
-    my $keyring= WebAuth::Keyring->read('WebAuth::NotKeyring');
-};
+$keyring = eval { WebAuth::Keyring->read('WebAuth::NotKeyring') };
 like ($@, qr{^second argument must be a WebAuth object}ms,
     '... as does trying to give one to the read function');
+
+# Check that passing in undef arguments to various functions implemented in
+# Perl XS results in exceptions rather than segfaults.
+$keyring = eval { WebAuth::keyring_new(undef, 1) };
+like ($@, qr{^WebAuth object is undef in WebAuth::keyring_new}ms,
+      'Calling keyring_new with an undef WebAuth object fails properly');
+my $wa = WebAuth->new;
+$keyring = $wa->keyring_new(1);
+eval { $keyring->add(time, time + 60, undef) };
+like ($@, qr{^WebAuth::Key object is undef in WebAuth::Keyring::add}ms,
+      '... as does passing undef key to WebAuth::Keyring::add');
